--- a/index.html
+++ b/index.html
@@ -61,21 +61,21 @@
            
                 <div id="basics">
                     <ul>
-                        <li>Age: 19</li>
-                        <li>Gender: male</li>
-                        <li>Favourite movie: Back to the future</li> 
-                        <li>Favourite band: Guns N' Roses</li>
+                        <li><b>Age</b>: 19</li>
+                        <li><b>Gender</b>: male</li>
+                        <li><b>Favourite movie</b>: Back to the future</li> 
+                        <li><b>Favourite band</b>: Guns N' Roses</li>
                     </ul>
                     <br>
                    <i style="padding-left:30px;"> email: vlad.fedoriuk2000@gmail.com</i>
 
                     <p style="margin-top: 20%;">
-                        <i style="font-family: sans-serif; font-size: 15px; color:gray"> 
+                        <i> 
                             Programming languages I use the most frequently: 
                         </i>
                     </p>
 
-                    <div class="tech-list" style="width: auto;">
+                    <div class="tech-list" id="langs">
                         <ul class="nav flex-column">
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Python</a>
@@ -90,12 +90,12 @@
                     </div>
 
                     <p style="margin-top: 10%;">
-                        <i style="font-family: sans-serif; font-size: 15px; color:gray"> 
+                        <i> 
                             Frameworks I use the most frequently: 
                         </i>
                     </p>
 
-                    <div class="tech-list" style="width: auto">
+                    <div class="tech-list" id="frames">
                         <ul class="nav flex-column">
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Flask</a>
