--- a/index.html
+++ b/index.html
@@ -60,14 +60,17 @@
                 </div>
            
                 <div id="basics">
-                    <ul>
+                    <ul style="padding:0px;">
                         <li><b>Age</b>: 19</li>
                         <li><b>Gender</b>: male</li>
                         <li><b>Favourite movie</b>: Back to the future</li> 
                         <li><b>Favourite band</b>: Guns N' Roses</li>
                     </ul>
-                    <br>
-                   <i style="padding-left:30px;"> email: vlad.fedoriuk2000@gmail.com</i>
+
+                    <div id="email">
+                        <br>
+                        <i>email: vlad.fedoriuk2000@gmail.com</i>
+                    </div>
 
                     <p style="margin-top: 20%;">
                         <i> 
