--- a/interests.html
+++ b/interests.html
@@ -39,7 +39,7 @@
           <div class="col-md-4">
             
                 <div class="card text-center">
-                    <img class="card-img-top image-resize" src="images/machine_lr.webp" alt="Machine learning">
+                    <img class="card-img-top image-resize" src="images/machine_lr.png" alt="Machine learning">
                     <div class="card-body text-center">
                         <h5 class="card-title">Data science</h5>
                         <a href="https://github.com/vladfedoriuk/data_science_fundamentals">
